# ferrum_compiler

./: .gitignore  Cargo.toml  README.md  manual_test.sh  test.sh
.github/workflows/: ci.yml
examples/02_if_statements/: stdout.txt
examples/02_if_statements/src/: _main.fe
examples/03_fibbonacci/src/: _main.fe
examples/04_labels/src/: _main.fe
examples/hello_world/src/: _main.fe
resources/test_project/src/: _main.fe  utils.fe
src/: lib.rs  main.rs  result.rs
src/borrow_checker/: mod.rs
src/code_gen/: mod.rs
src/code_gen/rust/: decl.rs  expr.rs  mod.rs  static.rs  stmt.rs  use.rs
src/config/: mod.rs
src/executor/rust/: mod.rs
src/helpers/: run.rs
src/ir/: mod.rs
src/ir/go/: mod.rs
src/ir/go/compiler/: decl.rs  expr.rs  import.rs  mod.rs  stmt.rs
src/ir/go/syntax/: decl.rs  expr.rs  mod.rs  static.rs  stmt.rs
src/ir/rust/: compiler.rs  decl.rs  expr.rs  mod.rs  static.rs  stmt.rs  use.rs
src/ir/rust/compiler/: decl.rs  expr.rs  mod.rs  stmt.rs  use.rs
src/ir/rust/syntax/: mod.rs  use.rs
src/lexer/: mod.rs
src/log/: mod.rs
src/parser/: mod.rs
src/project_gen/: mod.rs
src/project_gen/rust/: mod.rs
src/reader/: mod.rs
src/source/: mod.rs
src/syntax/: decl.rs  expr.rs  mod.rs  node.rs  rust_compiler.rs  static.rs  stmt.rs  use.rs
src/token/: mod.rs
src/type/: mod.rs
src/type_resolver/: decl.rs  expr.rs  mod.rs  scope.rs  static.rs  stmt.rs  use.rs
src/utils/: mod.rs  run.rs  string.rs  sync.rs
tests/: examples_test.rs
tests/integration/: mod.rs
tests/integration/projects/imports/: stdout.txt
(+9 files in other folders)
