[package]
name = "ferrum_compiler"
version = "0.0.1"
description = "Compiler library for the Ferrum programming language."
license = "MIT"

edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
log = "0.4.20"
thiserror = "1.0.41"
