[package]
name = "ferrum_compiler"
version = "0.0.4"
description = "Compiler library for the Ferrum programming language."
license = "MIT"
readme = "README.md"
repository = "https://github.com/ferrum-lang/ferrum_compiler"

edition = "2021"

[lib]
name = "ferrum_compiler"

[[bin]]
name = "manual_test"
required-features = ["build-binary"]

[features]
build-binary = ["env_logger"]

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
log = "0.4.20"
thiserror = "1.0.41"

env_logger = { version = "0.10.0", optional = true }

